--- a/domino-effect.cabal
+++ b/domino-effect.cabal
@@ -18,4 +18,5 @@ executable domino-effect
   main-is:             Main.hs
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
+                     , ansi-terminal
   other-modules:       DominoEffect
