--- a/domino-effect.cabal
+++ b/domino-effect.cabal
@@ -19,4 +19,5 @@ executable domino-effect
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
                      , ansi-terminal
+                     , random
   other-modules:       DominoEffect
