Stub Tree of domino bones 🌳

--- a/domino-effect.cabal
+++ b/domino-effect.cabal
@@ -21,3 +21,4 @@ executable domino-effect
                      , ansi-terminal
                      , random
   other-modules:       DominoEffect
+                     , DominoTree
