Rearrange and clean up code 🛁

--- a/domino-effect.cabal
+++ b/domino-effect.cabal
@@ -21,5 +21,6 @@ executable domino-effect
                      , ansi-terminal
                      , random
   other-modules:       DominoRecurse
+                     , Puzzles
 --                     , DominoTree
 --                     , DominoEffect
