--- a/domino-effect.cabal
+++ b/domino-effect.cabal
@@ -20,7 +20,5 @@ executable domino-effect
   build-depends:       base >= 4.7 && < 5
                      , ansi-terminal
                      , random
-  other-modules:       DominoRecurse
+  other-modules:       DominoEffect
                      , Puzzles
---                     , DominoTree
---                     , DominoEffect
