--- a/.gitignore
+++ b/.gitignore
@@ -87,7 +87,6 @@ fabric.properties
 .dropbox
 .dropbox.attr
 .dropbox.cache
-*.log
 *.ctxt
 .mtj.tmp/
 *.jar
@@ -97,7 +96,9 @@ fabric.properties
 *.tar.gz
 *.rar
 hs_err_pid*
-.gradle
+*/.gradle
+*/build/
+/.gradle
 /build/
 gradle-app.setting
 !gradle-wrapper.jar
